<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <org.smssecure.smssecure.components.SwitchPreferenceCompat
                        android:key="pref_enable_passphrase_temporary"
                        android:defaultValue="true"
                        android:title="@string/preferences__enable_passphrase"
                        android:summary="@string/preferences__enable_local_encryption_of_messages_and_keys"/>

    <Preference android:key="pref_change_passphrase"
                android:title="@string/preferences__change_passphrase"
                android:summary="@string/preferences__change_your_passphrase"
                android:dependency="pref_enable_passphrase_temporary"/>

    <org.smssecure.smssecure.components.SwitchPreferenceCompat
                        android:defaultValue="false"
                        android:key="pref_timeout_passphrase"
                        android:title="@string/preferences__timeout_passphrase"
                        android:summary="@string/preferences__forget_passphrase_from_memory_after_some_interval"
                        android:dependency="pref_enable_passphrase_temporary"/>

    <Preference android:title="@string/preferences__pref_timeout_interval_title"
                android:key="pref_timeout_interval"
                android:dependency="pref_timeout_passphrase"/>

    <org.smssecure.smssecure.components.SwitchPreferenceCompat
                        android:defaultValue="true"
                        android:key="pref_screen_security"
                        android:title="@string/preferences__screen_security"
                        android:summary="@string/preferences__disable_screen_security_to_allow_screen_shots" />

    <org.smssecure.smssecure.components.SwitchPreferenceCompat
                        android:defaultValue="true"
                        android:key="pref_biometric_lock"
                        android:title="@string/preferences__biometric_lock"
                        android:summary="@string/preferences__lock_app_with_fingerprint_or_pin" />

    <org.smssecure.smssecure.components.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="pref_incognito_keyboard"
        android:title="@string/preferences__incognito_keyboard"
        android:summary="@string/preferences__request_keyboard_to_disable_personalized_learning"/>

    <Preference android:key="preference_category_blocked"
                android:title="@string/preferences_app_protection__blocked_contacts" />
</PreferenceScreen>
