<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:icon="?pref_ic_sms_mms"
        android:key="preference_category_sms_mms"
        android:title="@string/preferences__sms_mms" />

    <Preference
        android:icon="?pref_ic_notifications"
        android:key="preference_category_notifications"
        android:title="@string/preferences__notifications" />

    <Preference
        android:icon="?pref_ic_app_protection"
        android:key="preference_category_app_protection"
        android:title="@string/preferences__privacy" />

    <Preference
        android:icon="?pref_ic_appearance"
        android:key="preference_category_appearance"
        android:title="@string/preferences__appearance" />

    <Preference
        android:icon="?pref_ic_chats"
        android:key="preference_category_chats"
        android:title="@string/preferences__chats" />

    <Preference
        android:icon="?pref_ic_advanced"
        android:key="preference_category_advanced"
        android:title="@string/preferences__advanced" />

    <Preference
        android:key="preference_search_limit"
        android:title="@string/set_search_limit" />

    <Preference
        android:key="preference_about"
        android:title="@string/preferences__about" />

    <Preference
        android:key="preference_privacy_policy"
        android:title="@string/preferences__privacy_policy" />
</PreferenceScreen>
