<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_toggle_pin_selected"
        android:icon="@drawable/ic_pin"
        android:title="@string/conversation_list_batch__menu_toggle_pin"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_delete_selected"
        android:icon="?menu_trash_icon"
        android:title="@string/conversation_list_batch__menu_delete_selected"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_select_all"
        android:icon="?menu_selectall_icon"
        android:title="@string/conversation_list_batch__menu_select_all"
        app:showAsAction="always" />

</menu>