<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="20dp"
    android:paddingBottom="10dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/set_search_limit"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/search_limit"
        app:boxBackgroundColor="@color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:helperText="Increasing this value will have great impact on performance"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/t1"
        app:startIconCheckable="false"
        app:suffixText="@string/message_per_thread"
        app:suffixTextAppearance="@style/TextAppearance.MaterialComponents.Caption">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_search_limit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:textSize="20sp"
            tools:text="500" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_set_search_limit"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:text="@string/apply_search_limit"
        app:cornerRadius="10dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/input1" />

</androidx.constraintlayout.widget.ConstraintLayout>